@@ -223,6 +223,7 @@ export(StatSpoke)
 export(StatSum)
 export(StatSummary)
 export(StatSummary2d)
+export(StatSummaryBin)
 export(StatSummaryHex)
 export(StatUnique)
 export(StatYdensity)
@@ -465,6 +466,7 @@ export(stat_sum)
 export(stat_summary)
 export(stat_summary2d)
 export(stat_summary_2d)
+export(stat_summary_bin)
 export(stat_summary_hex)
 export(stat_unique)
 export(stat_ydensity)
