@@ -1,9 +1,15 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/stat-summary.r
-\name{stat_summary}
+% Please edit documentation in R/stat-summary-bin.R, R/stat-summary.r
+\name{stat_summary_bin}
 \alias{stat_summary}
-\title{Summarise y values at every unique x.}
+\alias{stat_summary_bin}
+\title{Summarise y values at unique/binned x x.}
 \usage{
+stat_summary_bin(mapping = NULL, data = NULL, geom = "pointrange",
+  fun.data = NULL, fun.y = NULL, fun.ymax = NULL, fun.ymin = NULL,
+  fun.args = list(), na.rm = FALSE, position = "identity",
+  show.legend = NA, inherit.aes = TRUE, ...)
+
 stat_summary(mapping = NULL, data = NULL, geom = "pointrange",
   fun.data = NULL, fun.y = NULL, fun.ymax = NULL, fun.ymin = NULL,
   fun.args = list(), na.rm = FALSE, position = "identity",
@@ -14,10 +20,11 @@ stat_summary(mapping = NULL, data = NULL, geom = "pointrange",
 \code{\link{aes}} or \code{\link{aes_string}}. Only needs to be set
 at the layer level if you are overriding the plot defaults.}
 
-\item{data}{A layer specific dataset - only needed if you want to override
-the plot defaults.}
+\item{data}{A data frame. If specified, overrides the default data frame
+defined at the top level of the plot.}
 
-\item{geom}{The geometric object to use display the data}
+\item{geom}{Use to override the default connection between
+\code{geom_histogram}/\code{geom_freqpoly} and \code{stat_bin}.}
 
 \item{fun.data}{A function that is given the complete data and should
 return a data frame with variables \code{ymin}, \code{y}, and \code{ymax}.}
@@ -30,8 +37,8 @@ single number.}
 
 \item{na.rm}{If \code{TRUE}, silently remove missing values.}
 
-\item{position}{The position adjustment to use for overlapping points
-on this layer}
+\item{position}{Position adjustment, either as a string, or the result of
+a call to a position adjustment function.}
 
 \item{show.legend}{logical. Should this layer be included in the legends?
 \code{NA}, the default, includes if any aesthetics are mapped.
@@ -42,30 +49,32 @@ rather than combining with them. This is most useful for helper functions
 that define both data and aesthetics and shouldn't inherit behaviour from
 the default plot specification, e.g. \code{\link{borders}}.}
 
-\item{...}{other arguments passed on to \code{\link{layer}}. This can
-include aesthetics whose values you want to set, not map. See
-\code{\link{layer}} for more details.}
+\item{...}{other arguments passed on to \code{\link{layer}}. There are
+  three types of arguments you can use here:
+
+  \itemize{
+  \item Aesthetics: to set an aesthetic to a fixed value, like
+     \code{color = "red"} or \code{size = 3}.
+  \item Other arguments to the layer, for example you override the
+    default \code{stat} associated with the layer.
+  \item Other arguments passed on to the stat.
+  }}
 }
 \description{
-\code{stat_summary} allows for tremendous flexibility in the specification
-of summary functions. The summary function can either supply individual
-summary functions for each of y, ymin and ymax (with \code{fun.y},
-\code{fun.ymax}, \code{fun.ymin}), or return a data frame containing any
-number of aesthetics with with \code{fun.data}. All summary functions
-are called with a single vector of values, \code{x}.
-}
-\details{
-A simple vector function is easiest to work with as you can return a single
-number, but is somewhat less flexible.  If your summary function operates
-on a data.frame it should return a data frame with variables that the geom
-can use.
+\code{stat_summary} operates on unique \code{x}; \code{stat_summary_bin}
+operators on binned \code{x}. They are more flexible versions of
+\code{\link{stat_bin}}: instead of just counting, the can compute any
+aggregate.
 }
 \section{Aesthetics}{
 
 \Sexpr[results=rd,stage=build]{ggplot2:::rd_aesthetics("stat", "summary")}
 }
 
-\section{Computed variables}{
+\section{Summary functions}{
+
+You can either supply summary functions individually (\code{fun.y},
+\code{fun.ymax}, \code{fun.ymin}), or as a single function (\code{fun.data}):
 
 \describe{
   \item{fun.data}{Complete summary function. Should take numeric vector as
@@ -77,6 +86,10 @@ can use.
   \item{fun.ymax}{ymax summary function (should take numeric vector and
     return single number)}
 }
+
+A simple vector function is easiest to work with as you can return a single
+number, but is somewhat less flexible. If your summary function computes
+multiple values at once (e.g. ymin and ymax), use \code{fun.data}.
 }
 \examples{
 d <- ggplot(mtcars, aes(cyl, mpg)) + geom_point()
@@ -88,9 +101,16 @@ d + stat_summary(fun.y = "median", colour = "red", size = 2)
 d + stat_summary(fun.y = "mean", colour = "red", size = 2)
 d + aes(colour = factor(vs)) + stat_summary(fun.y = mean, geom="line")
 
-# Alternatively, you can supply a function that operates on a data.frame.
 d + stat_summary(fun.y = mean, fun.ymin = min, fun.ymax = max,
   colour = "red")
+
+#' d <- ggplot(diamonds, aes(carat, price))
+d + geom_smooth()
+d + geom_line(stat = "summary_bin", binwidth = 0.1, fun.y = "mean")
+
+d <- ggplot(diamonds, aes(cut))
+d + geom_bar()
+d + stat_summary_bin(aes(y = price), fun.y = "mean", geom = "bar")
 \donttest{
 # A set of useful summary functions is provided from the Hmisc package:
 stat_sum_df <- function(fun, geom="crossbar", ...) {
